@@ -1,7 +1,8 @@
 AUX wrapper.patch 356 RMD160 9026afb702c8d43da9b119966bd6bdf99dbee874 SHA1 476722b4e0a72c029095e04ed309d581c8e8d9b1 SHA256 3542f52181d62e435f0eb5baeb3f97b8c4f182bb7a313507e85901d3893f0a67
 DIST mucommander-0_8_2-portable.tar.gz 1946717 RMD160 1fabad3eb41050aa9ce787a5b61d6f6627b015ec SHA1 a0381f47cdb27dc576c1a4f22f20b9592737e675 SHA256 ceba9d919fd3e428b98e64fd7cfced9e915f70958444826dda6d7e91eb51656f
 DIST mucommander-bin-20080921.tar.gz 2354968 RMD160 17b7a085feaad1d5f48676406021d2e4e1e9707f SHA1 03934888221b0fea9fde95b2173c195728fbab90 SHA256 033ef85d7b765228eff8e53cb53a236dec07b323853f13ebfe5629aa678eba23
-EBUILD mucommander-bin-0.8.2.ebuild 892 RMD160 3614057d37b8a48f5aa4e0006866507a761334ad SHA1 1d75406058774f9351298296522cb1c2173256ea SHA256 5c52940feafda012ef9dd59c0a84bd1e140aae26f38092c568061d56274413ba
-EBUILD mucommander-bin-20080921.ebuild 876 RMD160 eb85483ef60fd64f0cefa2b8ef049d03300d3718 SHA1 e0b15eaa4a8c11f0e6aca6be70e71795090a02d0 SHA256 8f09987f1d1394236007aab2c27ef054a916b77501e05c52c74b7e4e6f759c86
-MISC ChangeLog 319 RMD160 ab33c39d7503c8a5e20f921064253575dc24ba32 SHA1 18e796ee17f8306058582ca772d952091f1411c0 SHA256 a1e4957641dc75355b10e34cd073a8659a267f1cc23fa1ee74cc365a6eae1e1e
+EBUILD mucommander-bin-0.8.2.ebuild 895 RMD160 893676b79743b9f76bf4068fe07edbba4dc138fe SHA1 5d5f886fc35417c297706dc0e60f1959ca4c41b7 SHA256 a7403bc1462ddfe6ae5faf5e191bd11eaf0f4ac34093fae75dbb9ef7cad32fd6
+EBUILD mucommander-bin-20080921-r1.ebuild 989 RMD160 ced6895e7030e88612062fcbe85d5b7bfb51bb52 SHA1 eb20d90e1c693bf49f1430e98d3ed1e23c77f8b5 SHA256 4273c92bda9ad2ac1cb6f92b1e63c5bf311dbadcc3a26a4e26f60051b249a88c
+EBUILD mucommander-bin-20080921.ebuild 879 RMD160 c0fe7fb58afd263d9de0f168cb89e453173037d7 SHA1 da7a195e9a0d0e98ac792ae541723236b6660486 SHA256 0e0431b28b774282bedb55059586f61279aef0c5580f2ac0ab3a38efa768e289
+MISC ChangeLog 630 RMD160 56b23495da8e28405d944b851b14b446fa18fafe SHA1 e6d0cd862c905f1ebba135a3537f16d93376fa27 SHA256 378d5db610d845820b6ec5cb4c18d48c340be4761ae4072918ecf5809f1f3757
 MISC metadata.xml 314 RMD160 f54676374bd77c4de597a41d91c970878c6b28b4 SHA1 efc76fc8c59aa2bd0bbe2d328db1c4fe57894122 SHA256 00084b7821bd2c155a6109bc1e677f5147c4c94e9ffe520bb6c9b9c6f619acb6
