@@ -2,6 +2,16 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2008; justin Lecher <justin@j-schmitz.net>
+  mucommander-bin-0.8.2.ebuild, mucommander-bin-20080921.ebuild,
+  +mucommander-bin-20080921-r1.ebuild:
+  desktop entry with icon added
+
+*mucommander-bin-20080921-r1 (22 Sep 2008)
+
+  22 Sep 2008;  <>  mucommander-bin-20080921-r1.ebuild
+  # INSERT ENTRY HERE
+
   21 Sep 2008; Justin Lecher <justin@j-schmitz.net> ChangeLog:
   nightly build added
 
